根据不同的AppType和AppId，log打印到不同的文件中

--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<variable name="appType" value="" />
+	<variable name="appId" value="" />
 	<targets>
 		<target name="debug" xsi:type="File"
-			fileName="${basedir}/Log.Debug.txt"
+			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Debug.txt"
 			deleteOldFileOnStartup="true"
-			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${message}" />
+			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
 	</targets>
 	<targets>
 		<target name="error" xsi:type="File"
-			fileName="${basedir}/Log.Error.txt"
+			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Error.txt"
 			deleteOldFileOnStartup="false"
-			layout="${longdate} ${threadid:padCharacter=0:padding=4:fixedLength=true} ${message}" />
+			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
 	</targets>
 	<rules>
 		<logger name="*" minlevel="Debug" writeTo="debug" />
