增加Rsync同步配置工具

--- a/Config/Rsync/rsyncd.conf
+++ b/Config/Rsync/rsyncd.conf
@@ -1,13 +1,11 @@
 uid = root
 gid = root
-#strict modes = no
 use chroot = no
 max connections = 100
 read only = no
 write only = no
-log file=/var/log/rsyncd.log
-# Remote sync configuration module
-[Tanghai]
+log file =/var/log/rsyncd.log
+[Upload]
 path = /home/tanghai/
 auth users = tanghai
 secrets file = /etc/rsyncd.secrets
