1.Manager App 启动进程成功，连接Linux服务器成功！ 2.日志增加Log-All.txt,所有服务器进程日志全部打到这个文件，方便调试

--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -4,6 +4,12 @@
 	<variable name="appType" value="" />
 	<variable name="appId" value="" />
 	<targets>
+		<target name="all" xsi:type="File"
+			fileName="${basedir}/Logs/Log-All.txt"
+			deleteOldFileOnStartup="false"
+			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
+	</targets>
+	<targets>
 		<target name="debug" xsi:type="File"
 			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Debug.txt"
 			deleteOldFileOnStartup="true"
@@ -16,6 +22,7 @@
 			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
 	</targets>
 	<rules>
+		<logger name="*" minlevel="Trace" writeTo="all" />
 		<logger name="*" minlevel="Debug" writeTo="debug" />
 		<logger name="*" minlevel="Error" writeTo="error" />
 	</rules>
