重新设置了日志格式，所有日志打印文件名和行号，Error日志还会打出堆栈

--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -5,25 +5,35 @@
 	<variable name="appId" value="" />
 	<targets>
 		<target name="all" xsi:type="File"
-			fileName="${basedir}/Logs/Log-All.txt"
+			fileName="${basedir}/Logs/Log.txt"
 			deleteOldFileOnStartup="false"
-			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
+		layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
 	</targets>
 	<targets>
 		<target name="debug" xsi:type="File"
 			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Debug.txt"
-			deleteOldFileOnStartup="true"
-			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
+			deleteOldFileOnStartup="false"
+			layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
 	</targets>
+
+	<targets>
+		<target name="info" xsi:type="File"
+			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Info.txt"
+			deleteOldFileOnStartup="false"
+			layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
+	</targets>
+	
 	<targets>
 		<target name="error" xsi:type="File"
 			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Error.txt"
 			deleteOldFileOnStartup="false"
-			layout="${longdate} ${var:appType} ${var:appId} ${message}" />
+			layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message} ${stacktrace:format=Flat:topFrames=100:skipFrames=2}" />
 	</targets>
+	
 	<rules>
 		<logger name="*" minlevel="Trace" writeTo="all" />
 		<logger name="*" minlevel="Debug" writeTo="debug" />
+		<logger name="*" minlevel="Info" maxlevel="Info" writeTo="info" />
 		<logger name="*" minlevel="Error" writeTo="error" />
 	</rules>
 </nlog>
