--- a/Server/Controller/Server.Controller.csproj
+++ b/Server/Controller/Server.Controller.csproj
@@ -35,6 +35,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Message\C2G_LoginGateHandler.cs" />
+    <Compile Include="Message\M2A_ReloadHandler.cs" />
+    <Compile Include="Message\C2M_ReloadHandler.cs" />
     <Compile Include="Message\R2G_GetLoginKeyHandler.cs" />
     <Compile Include="Message\C2R_SubscribeLogHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
