1.提供将所有App功能合并到一个进程的功能，AppType=AllServer表示这个进程可以充当所有server，调试非常方便 2.编译调试目录改成Egametang目录 3.启动配置可以用命令行编辑器随时添加切换

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,9 @@ ENDIF()
 PROJECT(CSharp)
 
 # 设置头文件查找路径
-INCLUDE_DIRECTORIES(ThirdParty/ENet)
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Platform)
+INCLUDE_DIRECTORIES(Server/ThirdParty/ENet)
 
 ADD_DEFINITIONS(-DHAS_SOCKLEN_T)
 
 # 子目录
-ADD_SUBDIRECTORY(ThirdParty/ENet)
+ADD_SUBDIRECTORY(Server/ThirdParty/ENet)
