--- a/Server/App/NLog.config
+++ b/Server/App/NLog.config
@@ -5,27 +5,27 @@
 	<variable name="appId" value="" />
 	<targets>
 		<target name="all" xsi:type="File"
-			fileName="${basedir}/Logs/Log.txt"
+			fileName="${basedir}/../Logs/Log.txt"
 			deleteOldFileOnStartup="false"
 		layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
 	</targets>
 	<targets>
 		<target name="debug" xsi:type="File"
-			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Debug.txt"
+			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}-Debug.txt"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
 	</targets>
 
 	<targets>
 		<target name="info" xsi:type="File"
-			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Info.txt"
+			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}-Info.txt"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message}" />
 	</targets>
 	
 	<targets>
 		<target name="error" xsi:type="File"
-			fileName="${basedir}/Logs/Log-${var:appType}-${var:appId}-Error.txt"
+			fileName="${basedir}/../Logs/Log-${var:appType}-${var:appId}-Error.txt"
 			deleteOldFileOnStartup="false"
 			layout="${longdate} ${var:appType} ${var:appId} ${callsite:className=false:methodName=false:fileName=true:includeSourcePath=false:skipFrames=2} ${message} ${stacktrace:format=Flat:topFrames=100:skipFrames=2}" />
 	</targets>
