--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -59,6 +59,9 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Component\NetworkComponent.cs">
       <Link>Component\NetworkComponent.cs</Link>
     </Compile>
+    <Compile Include="..\..\Unity\Assets\Scripts\Component\RobotComponent.cs">
+      <Link>Component\RobotComponent.cs</Link>
+    </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Component\TimerComponent.cs">
       <Link>Component\TimerComponent.cs</Link>
     </Compile>
@@ -92,8 +95,8 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Message\AMessage.cs">
       <Link>Message\AMessage.cs</Link>
     </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Message\AMEvent.cs">
-      <Link>Message\AMEvent.cs</Link>
+    <Compile Include="..\..\Unity\Assets\Scripts\Message\AMHandler.cs">
+      <Link>Message\AMHandler.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Message\AppType.cs">
       <Link>Message\AppType.cs</Link>
@@ -101,8 +104,8 @@
     <Compile Include="..\..\Unity\Assets\Scripts\Message\ErrorCode.cs">
       <Link>Message\ErrorCode.cs</Link>
     </Compile>
-    <Compile Include="..\..\Unity\Assets\Scripts\Message\IMRegister.cs">
-      <Link>Message\IMRegister.cs</Link>
+    <Compile Include="..\..\Unity\Assets\Scripts\Message\IMHandler.cs">
+      <Link>Message\IMHandler.cs</Link>
     </Compile>
     <Compile Include="..\..\Unity\Assets\Scripts\Message\Message.cs">
       <Link>Message\Message.cs</Link>
