--- a/Unity/Unity.CSharp.csproj
+++ b/Unity/Unity.CSharp.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Assets\Scripts\Component\TimeComponent.cs" />
     <Compile Include="Assets\Scripts\Component\TimerComponent.cs" />
     <Compile Include="Assets\Scripts\Config\ACategory.cs" />
+    <Compile Include="Assets\Scripts\Config\AConfigComponent.cs" />
     <Compile Include="Assets\Scripts\Config\AConfig.cs" />
     <Compile Include="Assets\Scripts\Config\ConfigAttribute.cs" />
     <Compile Include="Assets\Scripts\Config\ConfigHelper.cs" />
@@ -125,7 +126,15 @@
     <Compile Include="Assets\Scripts\Message\RpcException.cs" />
     <Compile Include="Assets\Scripts\Entity\Config\BuffConfig.cs" />
     <Compile Include="Assets\Scripts\Entity\Message\Message.cs" />
-    <Compile Include="Assets\Scripts\Other\BsonClassMapRegister.cs" />
+    <Compile Include="Assets\Scripts\Object\Component.cs" />
+    <Compile Include="Assets\Scripts\Object\Entity.cs" />
+    <Compile Include="Assets\Scripts\Object\IAwake.cs" />
+    <Compile Include="Assets\Scripts\Object\ILoader.cs" />
+    <Compile Include="Assets\Scripts\Object\IStart.cs" />
+    <Compile Include="Assets\Scripts\Object\IUpdate.cs" />
+    <Compile Include="Assets\Scripts\Object\Object.cs" />
+    <Compile Include="Assets\Scripts\Object\ObjectEventAttribute.cs" />
+    <Compile Include="Assets\Scripts\Object\ObjectManager.cs" />
     <Compile Include="Assets\Scripts\Other\EntityType.cs" />
     <Compile Include="Assets\Scripts\Other\GameException.cs" />
     <Compile Include="Assets\Scripts\Other\Options.cs" />
