--- a/Unity/Unity.CSharp.csproj
+++ b/Unity/Unity.CSharp.csproj
@@ -135,7 +135,7 @@
     <Compile Include="Assets\Scripts\Object\Object.cs" />
     <Compile Include="Assets\Scripts\Object\ObjectEventAttribute.cs" />
     <Compile Include="Assets\Scripts\Object\ObjectManager.cs" />
-    <Compile Include="Assets\Scripts\Other\EntityType.cs" />
+    <Compile Include="Assets\Scripts\Object\EntityType.cs" />
     <Compile Include="Assets\Scripts\Other\GameException.cs" />
     <Compile Include="Assets\Scripts\Other\Options.cs" />
     <Compile Include="Assets\Scripts\Entity\Config\StartConfig.cs" />
